--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,21 @@
-anyio==3.6.2
-click==8.1.3
-colorama==0.4.6
-fastapi==0.88.0
-gunicorn==20.1.0
-h11==0.14.0
-idna==3.4
-joblib==1.2.0
-numpy==1.23.5
-pandas==1.5.2
-pydantic==1.10.2
-python-dateutil==2.8.2
-pytz==2022.6
-scikit-learn==1.1.3
-scipy==1.9.3
-six==1.16.0
-sniffio==1.3.0
-starlette==0.22.0
-threadpoolctl==3.1.0
-typing_extensions==4.4.0
-uvicorn==0.20.0
+anyio
+click
+colorama
+fastapi
+gunicorn
+h11
+idna
+joblib
+numpy
+pandas
+pydantic
+python-dateutil
+pytz
+scikit-learn
+scipy
+six
+sniffio
+starlette
+threadpoolctl
+typing_extensions
+uvicorn
